Update results_path for AutoML configuration

--- a/QSAR.ipynb
+++ b/QSAR.ipynb
@@ -300,7 +300,7 @@
    "outputs": [],
    "source": [
     "automl = AutoML(\n",
-    "    results_path=r\"C:\\Users\\adamm\\Desktop\\BigStreamlitApp\\5ht6_fixed_pKi\",\n",
+    "    results_path=r\"path_to_directory_for_automl_outputs\",\n",
     "    algorithms=['Random Forest', 'Extra Trees', 'LightGBM', 'Xgboost', 'CatBoost', 'Neural Network'],\n",
     "    train_ensemble=True,\n",
     "    stack_models=True,\n",
